# Jumble

./: LICENSE  README.md  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: jumbler.rs  lang.rs  lib.rs  main.rs  processor.rs
src-tauri/src/lang/: en.json  pt-BR.json
src/routes/: +page.svelte
